# cpp_terminal_color_lib

./: .gitmodules  CMakeLists.txt
include/: color.hpp
src/: color.cpp
